# ece-1724-project

./: Cargo.toml  LICENSE  ProjectProposal  ProjectProposal.md  README.md  SystemDesign.drawio  Trunk.toml  index.html
chatroom-yew/: Cargo.toml  Trunk.toml  index.html
chatroom-yew/src/: config.rs  main.rs
chatroom-yew/src/components/: home.rs  mod.rs
chatroom-yew/src/components/auth/: login.rs  mod.rs
chatroom-yew/src/components/chat/: mod.rs
chatroom-yew/src/components/layout/: header.rs
chatroom-yew/src/services/: auth.rs  mod.rs  websocket.rs
chatroom-yew/src/types/: chat.rs  chat_room.rs  mod.rs
chatroom-yew/static/styles/: auth.css  chat-room.css  main.css  room.css
doc/: run-and-test.md
rust_chat_application/: Cargo.toml  command.txt  init.sh
rust_chat_application/scripts/: kill-ports.sh  test_create_chat_room.sh
rust_chat_application/src/: main.rs
rust_chat_application/src/database/: mod.rs
rust_chat_application/src/handlers/: chat_room_apis.rs  mod.rs  user_auth_apis.rs  websocket_handler.rs
rust_chat_application/src/repository/: chat_room_repo.rs  mod.rs  user_repo.rs
rust_chat_application/src/services/: chat_room_service.rs  mod.rs  user_auth_service.rs
src/: config.rs  main.rs
src/components/: home.rs  mod.rs
src/components/auth/: login.rs  signup.rs
src/components/chat/: chat_room.rs  chat_room_function.rs  mod.rs
src/components/layout/: header.rs
src/context/: auth.rs  mod.rs
src/services/: auth.rs  chat_room.rs  mod.rs  websocket.rs
src/types/: auth.rs  chat.rs  chat_room.rs  mod.rs
static/styles/: auth.css  chat-room.css  main.css  room.css
ws_example_application/: Cargo.toml
ws_example_application/src/: client.rs  main.rs
