[package]
name = "chatroom-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"