[package]
name = "chatroom-yew"
version = "0.1.0"
edition = "2021"
rustflags = ["--cfg", "tokio_unstable"]
target = "wasm32-wasi"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.55", features = ["WebSocket", "MessageEvent"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"

reqwasm = "0.5.0"
futures = "0.3.17"
chrono = { version = "0.4.39", features = ["serde"] }
tokio-tungstenite-wasm = "0.4.0"

# WebSocket libs
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# headers = "0.4"
# tokio = { version = "1", features = ["full"] }
# tokio-tungstenite = "0.24.0"
# tungstenite = "0.24.0"
# futures = "0.3"
# futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# tower-http = { version = "0.6.2", features = ["cors", "fs", "trace", "add-extension"] }