[package]
name = "chatroom-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.55", features = ["WebSocket", "MessageEvent"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"

reqwasm = "0.5.0"
futures = "0.3.17"
chrono = { version = "0.4.39", features = ["serde"] }
tokio-tungstenite-wasm = "0.4.0"
