[package]
name = "rust_chat_application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mysql_async = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
